# yt2newpipe

./: .gitignore  README.md  requirements.dev.in  requirements.dev.txt  requirements.txt  setup.cfg
yt2newpipe/: main.py
