[metadata]
name = yt2newpipe
version = attr: yt2newpipe.__version__
long_description = file: README.md
author = Robert Huselius
author_email = robert@huseli.us
long_description_content_type = text/markdown
url = https://github.com/Eboreg/yt2newpipe

[options]
packages = yt2newpipe
python_requires = >=3.5
install_requires =
    google-api-python-client
    google-auth-oauthlib
    google-auth-httplib2
include_package_data = true

[flake8]
exclude =
    .git
    __pycache__
    *.pyi
    **/lib
ignore = W504,W601,F723,E731,E266,E741
max-line-length = 119
max-doc-length = 79

[isort]
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
line_length = 119
multi_line_output = 5
skip = .venv,build,dist

[mypy]
check_untyped_defs = True
show_error_codes = True
files = .
ignore_missing_imports = True
exclude = build
